# Yakuza-Dead-Souls-EX

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  functions.json
docs/: ARCHITECTURE.md  BUILDING.md  DONT_RECHASE.md  EDGE_JOURNAL_HLE.md  FLAGS.md  LAYER1_SESSION_2026-06-25.md  LESSONS.md  NID_SYSTEM.md  PPU_VMX_ENDIANNESS.md  PSDEVWIKI_REFS.md  RSX_FRAGMENT_PROGRAM.md  RSX_GRAPHICS.md  RSX_LAYER1.md  SPURS_TASKSET.md  SPU_INTERP_PLAN.md  TOOLING_WORKORDER.md  TOOLS.md  TRACEDIFF.md
include/ps3emu/: error_codes.h
libs/audio/: cellAudio.c  cellAudio.h
libs/codec/: adx_decode.c  adx_decode.h  movie_ffmpeg.c  movie_ffmpeg.h
libs/filesystem/: cellFs.c  cellFs.h
libs/input/: cellPad.c
libs/network/: cellHttps.c  cellNetCtl.c  cellNetCtl.h  cellSsl.c  sceNp.c  sceNp.h  sceNpTrophy.c  sceNpTrophy.h
libs/system/: cellGame.c  cellGame.h  cellMsgDialog.c  cellSaveData.c  cellSysutil.c  cellUserInfo.c  sysPrxForUser.c  sysPrxForUser.h
libs/video/: cellGcmSys.c  cellGcmSys.h  rsx_commands.c  rsx_commands.h  rsx_d3d12_backend.c  rsx_dispatch.c  rsx_dispatch.h  rsx_fp_decompiler.c  rsx_fp_decompiler.h  rsx_live_draw.c  rsx_live_draw.h  rsx_null_backend.c  rsx_null_backend.h  rsx_vp_decompiler.c
libs/video/tests/: build_replay.cmd  build_replay_before.cmd  build_replay_s30.cmd  build_replay_s31.cmd  replay_main.c  test_fp_decompiler.c  validate_fp_shaders.c
runtime/ppu/: ppu_memory.h
runtime/spu/: spu_channels.c  spu_context.h  spu_dma.h  spu_fltrec.c  spu_fltrec.h  spu_helpers.h  spu_interp.c  spu_interp_gen.h  spu_lockstep.c  spu_lockstep.h  spu_workload.c  spu_workload.h
runtime/syscalls/: lv2_deadline.c  lv2_register.c  lv2_syscall_table.h  sys_cond.c  sys_cond.h  sys_event.c  sys_event.h  sys_fs.c  sys_memory.c  sys_memory.h  sys_mutex.c  sys_mutex.h  sys_ppu_thread.c  sys_semaphore.c  sys_semaphore.h  sys_timer.c  sys_timer.h  sys_vm.c
scratch/: golden_boot.txt
tests/edge_journal_hle/: CMakeLists.txt  main.cpp
tests/spu_atomics_stress/: CMakeLists.txt  main.c
tests/sync_stress/: CMakeLists.txt  main.c
tools/: boot_until.ps1  bootdiff.py  cmp_fifo.py  cycle.ps1  decrypt_self.py  disasm_audit.py  disasm_audit_operands.py  diverge.ps1  endian_audit.py  endian_audit_whitelist.txt  eventdiff.py  find_functions.py  find_spu_functions.py  fltrec_dump.py  gen_spu_images.py  gen_spu_interp.py  golden_boot.ps1  hle_dispatch_classify.py  lift_audit.py  lift_parse_audit.py  lift_prx.py  lint_handoff.py  nid_database.py  nv40_methods.py  ppu_disasm.py  ppu_diverge.ps1  ppu_lifter.py  rrc_export.py  rrc_imagediff.py  rrc_methods.py  rrc_replay.py  spu_disasm.py  spu_disasm_audit.py  spu_disasm_audit_operands.py  spu_lifter.py  test_ppu_lift.py  test_spu_lift.py  test_spu_lift_batch3.py  tracediff.py  waitgraph.py
tools/spu_fuzz_refs/: spu_refs_api.py  spu_refs_byteshuf.py  spu_refs_carry.py  spu_refs_compare.py  spu_refs_control.py  spu_refs_elemshift.py  spu_refs_examples.py  spu_refs_extend.py  spu_refs_float.py  spu_refs_immload.py  spu_refs_intarith.py  spu_refs_intmisc.py  spu_refs_logical.py  spu_refs_memory.py  spu_refs_mpy.py  spu_refs_quadshift.py  spu_refs_select.py
yakuza/: CMakeLists.txt  app.rc  dispatch.cpp  edge_journal_hle.cpp  edge_journal_hle.h  gen_func_table.py  gen_imports.py  import_overrides.cpp  main.cpp  shims.cpp  threads.cpp  yakuza_runner.h
